Fix untranslatable strings

--- a/Romanian/main/Browser.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Browser.apk/res/values-ro/strings.xml
@@ -158,7 +158,7 @@
     <string name="color_picker_dialog_title">Selectaţi culoarea</string>
     <string name="color_picker_hue">Nuanță</string>
     <string name="color_picker_saturation">Saturaţie</string>
-    <string name="color_picker_value">Valoare</string>
+<!--<string name="color_picker_value">Valoare</string>-->
     <string name="comment_app_menu">Comentariu</string>
     <string name="comment_menu">Comentariu</string>
     <string name="common_use_phrase_bottom_bar_cn_txt">.cn</string>
@@ -251,14 +251,14 @@ Paginile pe care le accesați nu vor fi stocate în istoricul de navigare​"</s
     <string name="download_dialog_file_length_nolength_txt">Doar o secundă…</string>
     <string name="download_failed">"Nu s-a putut descărca"</string>
     <string name="download_filter_all">Toate</string>
-    <string name="download_filter_apk">Apk</string>
+    <string name="download_filter_apk">.apk</string>
     <string name="download_filter_application">Aplicații</string>
     <string name="download_filter_audio">Muzică</string>
     <string name="download_filter_image">Fotografii</string>
     <string name="download_filter_others">Altele</string>
     <string name="download_filter_text">Fișiere</string>
     <string name="download_filter_video">Videoclipuri</string>
-    <string name="download_filter_zip">Zip</string>
+    <string name="download_filter_zip">.zip</string>
     <string name="download_in_process">Descărcare…</string>
     <string name="download_list_open_xl_ok">OK</string>
     <string name="download_memory_info_avai">" disponibil %s|"</string>
@@ -351,7 +351,7 @@ Părăsiţi această pagină?"</string>
     <string name="js_dialog_before_unload_positive_button">Părăsiţi pagina</string>
     <string name="js_dialog_before_unload_title">Confirmaţi navigarea</string>
     <string name="js_dialog_title">Pagina de la \" %s \" zice:</string>
-    <string name="js_dialog_title_default">JavaScript</string>
+<!--<string name="js_dialog_title_default">JavaScript</string>-->
     <string name="js_disable_confirm_message">Dezactivarea JavaScript poate cauza afișarea incorectă a unor site-uri.</string>
     <string name="js_disable_confirm_title">Dezactivaţi JavaScript?</string>
     <string name="keep_queued_download">Păstrează</string>
