--- a/Romanian/main/Stk1.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Stk1.apk/res/values-ro/strings.xml
@@ -14,7 +14,7 @@
     <string name="button_no">Nu</string>
     <string name="button_ok">OK</string>
     <string name="button_yes">Da</string>
-    <string name="default_call_setup_msg">Apel în curs…</string>
+<!--<string name="default_call_setup_msg">Apel în curs…</string>-->
     <string name="digits">Cifre (0-9, *, #, +)</string>
     <string name="disable_app">Dezactivată</string>
     <string name="enable_app">Activată</string>
