--- a/Romanian/main/XiaomiServiceFramework.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XiaomiServiceFramework.apk/res/values-ro/strings.xml
@@ -74,7 +74,7 @@ Introduceți numărul de telefon asociat cu noua cartelă SIM pentru a reactiva 
     <string name="activate_popup_title_manual">Activare %s</string>
     <string name="activate_popup_title_new_sim_card">Reactivare %s</string>
     <string name="activate_popup_title_register_account">Asociaţi cartela SIM</string>
-    <string name="activate_sms_postfix">Acest mesaj SMS este utilizat pentru activarea serviciului Mi</string>
+<!--<string name="activate_sms_postfix">Acest mesaj SMS este utilizat pentru activarea serviciului Mi</string>-->
     <string name="activate_status_desc_acquire_phone_number">Verificare număr de telefon…</string>
     <string name="activate_status_desc_acquire_phone_number_server_error">Eroare de server la verificarea numărului de telefon</string>
     <string name="activate_status_desc_acquire_phone_number_server_no_info">"Nu s-a putut verifica numărul de telefon"</string>
